fix the  login page bg visibility problem

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ h2{
 .overview:nth-child(1){
    background-color: red;
 }
+.login{
+   background-image: url("./LoginBg.jpg");
+}
